Compiler/tests/typing/bad/testfile-borrow_mut-6.rs

fn foo(x: &mut i32) { return; }
fn main() { let x : i32 = 42; foo(& x); return;}
